--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=YY, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Hello peaple</title>
 </head>
 <body>
   <div class="header" id="header">
       <div class="header_left">
-          <img src="images/236.png">
-          <img src="images/лого.png">
-      </div>
+        <img src="images/лого.png">
+          <img src="images/236 без детей.png">
+          </div>
       <div class="header_right"></div>
       <img src="images/гл 1.png">
       <img src="images/кругл фотки.png">
-      <nav>
+      <nav class="header_right navigation">
         <ul>
             <li><a href="#school">О школе</a></li>
             <li><a href="#courses">Курсы</a></li>
@@ -35,12 +36,13 @@
           <button><a href="pages/school.html">ПОДРОБНЕЕ</a></button>
       </div>
       <div>
-        <div class="page3_left"></div>
+        <div class="page3_left">
         <h2>ПОЧЕМУ БЫТЬ ДИЗАЙНЕРОМ КРУТО</h2>
         <ul>
             <li>Дизайнер-это высокооплачиваемая престижная профессия</li>
             <li>Дизайнер-это высокооплачиваемая престижная профессия</li>
         </ul>
+        </div>
         <div class="page3_right"></div>
           <h2>ДИЗАЙНЕР-ЭТО НЕ ТОЛЬКО</h2>
           <ul>
