--- a/pages/achievements.html
+++ b/pages/achievements.html
@@ -10,12 +10,12 @@
     <a href="../index.html">домашняя страница</a>
     <div class="header_achievements" id="header_achievements">
         <div class="header_left">
-            <img src="images/236.png">
-            <img src="images/лого.png">
+            <img src="../images/236 без детей.png">
+            <img src="../images/лого.png">
         </div>
         <div class="header_right"></div>
-        <img src="images/гл 1.png">
-        <img src="images/кругл фотки.png">
+        <img src="../images/гл 1.png">
+        <img src="../images/кругл фотки.png">
         <nav>
           <ul>
               <li><a href="#school">О школе</a></li>
@@ -33,32 +33,32 @@
             <h2>Конкурс -выставка «Escucho mi voz» в Мексике (2019)</h2>
             <p>Само обучение в школе...</p>
             <p>Вот некоторые из работ наших студентов</p>
-            <img src="../images/">
-            <img src="images/.png">
+            <img src="../images/достиж 1.png">
+            <img src="../images/достиж 2.png">
            <button><a href="http">БОЛЬШЕ РАБОТ</a></button>
         </div>
-        <div id="Ukraine_mystical">
-            <h2>Выставка «Украина реальная и 
-                мистическая глазами детей»</h2>
+        <div class="ukraine_mistical">
+            <h2>Выставка " Украина реальная и мистическая глазами детей"</h2>
             <p>Само обучение в школе...</p>
             <p>Вот некоторые из работ наших студентов</p>
-            <video src="images/.png">
-            <img src="images/.png">
+            <img src="../images/достиж стр 3.png">
+            <img src="../images/достиж 3 стр 3.png">
+            <img src="../images/достиж 4 стр 3.png">
            <button><a href="http">БОЛЬШЕ РАБОТ</a></button>
         </div>
-        <div id="Mexico2020">
+        <div class="mexico2020">
             <h2>Конкурс -выставка «Escucho mi voz» в Мексике (2020)</h2>
             <p>Само обучение в школе...</p>
             <p>Вот некоторые из работ наших студентов</p>
-            <img src="images/.png">
-            <img src="images/.png">
+            <img src="../images/достиж 5 стр 4.png">
+            <img src="../images/достиж 6 стр 4.png">
            <button><a href="http">БОЛЬШЕ РАБОТ</a></button>
         </div>
       </main>
       <footer id="contacts">
           <h4>ОСТАЛИСЬ ВОПРОСЫ</h4>
           <h4>КОНТАКТЫ:</h4>
-          <img src="images/лого бел.png">
+          <img src="../images/лого бел.png">
           <a href="#header_achievements">Вернуться на главную</a>
       </footer>
   </body>
