--- a/pages/courses/basic.html
+++ b/pages/courses/basic.html
@@ -9,19 +9,19 @@
 <body>
   <div class="header_basic" id="header_basic">
           <h1>БАЗОВЫЙ КУРС</h1>
-          <img src="images/стр 4 баз на курсе.png">
-          <img src="images/лого.png">
-          <a href="../../index.html">домашняя страница</a></head>
+          <img src="../../images/стр 4 баз на курсе.png">
+          <img src="../../images/лого бел курсы.png">
+          <a href="../../index.html">домашняя страница</a>
       </div>
      <main>
-      <div id="video">
-          <video src="images/.png">
-          <img src="../../images/баз работа 1.png">
+      <div class="video">
+          <video src="../../images/ютуб курсы.png">
+          <img src="../../images/курсы фон стр 2.png">
           <h3>ЧЕМУ ВЫ НАУЧИТЕСЬ</h3>
           <p>Само обучение в школе...</p>
        </div>
        <div id="program">
-        <img src="images/.png">
+        <img src="../../images/баз стр 3 девочка.png">
         <div class="page3_left"></div>
         <h3>ПРОГРАММА КУРСА</h3>
         <ul>
@@ -35,47 +35,47 @@
             <li>Дизайнер-это высокооплачиваемая престижная профессия</li>
         </ul>
         </div>
-        <div id="works">
+        <div class="works">
             <h3>МЫ ГОРДИМСЯ НАШИМИ УЧЕНИКАМИ</h3>
             <p>Вот некоторые из работ нашихстудентов</p>
-            <img src="images/.png">
-            <img src="images/.png">
+            <img src="../../images/баз работа 1.png">
+            <img src="../../images/баз работа 2.png">
             <button><a href="http">БОЛЬШЕ РАБОТ</a></button>
          </div>
-         <div id="structure">
-            <img src="images/.png">
+        <div class="structure">
+            <img src="../../images/баз стр 6.png">
             <h3>СРУКТУРА УРОКА</h3>
             <p>Текст...</p>
          </div>
          <div class="price">
-           <img src="images/фон.png">
+           <img src="../../images/курсы фон стр 7 .png">
             <h3>СКОЛЬКО ЭТО СТОИТ</h3>
             <div class="price_normal_1">
             <h3>900грн в месяц</h3>
             <p>Условия покупки</p>
             <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
             </div>
-        </div>
-        <div class="price3_2"></div>
+            <div class="price_normal_2">
             <h3>900грн в месяц</h3>
             <p>Условия покупки</p>
             <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
-        </div>
-        <div class="price3_3"></div>
+          </div>
+          <div class="price_normal_3">
             <h3>900грн в месяц</h3>
             <p>Условия покупки</p>
             <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
-        </div>
-        <div id="belief">
-            <img src="images/.png">
+         </div>
+        </div> 
+        <div class="belief">
+            <img src="../../images/баз стр 8.png">
             <h3>ЕЩЕ СОМНЕВАЕТЕСЬ</h3>
             <p>Текст...</p>
          </div>
     </main>
-    <footer id="contacts">
+    <footer class="contacts">
         <h4>ОСТАЛИСЬ ВОПРОСЫ</h4>
         <h4>КОНТАКТЫ:</h4>
-        <img src="images/лого бел.png">
+        <img src="../../images/лого бел.png">
         <a href="#header_basic">Вернуться на главную</a>
     </footer>
 </body>
