--- a/pages/courses/grafic.html
+++ b/pages/courses/grafic.html
@@ -9,19 +9,18 @@
 <body>
   <div class="header_grafic" id="header_grafic">
           <h1>ГРАФИКА И WEB-ДИЗАЙН</h1>
-          <img src="images/стр 4 баз на курсе.png">
-          <img src="images/лого.png">
-          <a href="../../index.html">домашняя страница</a></head>
+          <img src="../../images/стр 4 граф на курсе.png">
+          <img src="../../images/лого бел курсы.png">
+          <a href="../../index.html">домашняя страница</a>
       </div>
      <main>
       <div id="video">
-          <img src="images/.png">
-          <img src="images/фон.png">
+          <video src="../../images/ютуб курсы.png">
+          <img src="../../images/курсы фон стр 2.png">
           <h3>ЧЕМУ ВЫ НАУЧИТЕСЬ</h3>
           <p>Само обучение в школе...</p>
        </div>
        <div id="program">
-        <img src="images/.png">
         <div class="page3_left"></div>
         <h3>ПРОГРАММА КУРСА</h3>
         <ul>
@@ -38,8 +37,8 @@
         <div id="works">
             <h3>МЫ ГОРДИМСЯ НАШИМИ УЧЕНИКАМИ</h3>
             <p>Вот некоторые из работ нашихстудентов</p>
-            <img src="images/.png">
-            <img src="images/.png">
+            <img src="../../images/граф работы 1.png">
+            <img src="../../images/граф работы 2.png">
             <button><a href="http">БОЛЬШЕ РАБОТ</a></button>
          </div>
          <div id="structure">
@@ -47,26 +46,27 @@
             <h3>СРУКТУРА УРОКА</h3>
             <p>Текст...</p>
          </div>
-         <div id="price">
-            <img src="images/фон.png">
-            <h3>СКОЛЬКО ЭТО СТОИТ</h3>
-            <div class="page3_1"></div>
-            <h3>900грн в месяц</h3>
-            <p>Условия покупки</p>
-            <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
-        </div>
-        <div class="page3_2"></div>
-            <h3>900грн в месяц</h3>
-            <p>Условия покупки</p>
-            <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
-        </div>
-        <div class="page3_3"></div>
-            <h3>900грн в месяц</h3>
-            <p>Условия покупки</p>
-            <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
-        </div>
+         <div class="price">
+            <img src="../../images/курсы фон стр 7 .png">
+             <h3>СКОЛЬКО ЭТО СТОИТ</h3>
+             <div class="price_normal_1">
+             <h3>900грн в месяц</h3>
+             <p>Условия покупки</p>
+             <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
+             </div>
+         </div>
+         <div class="price_normal_2"></div>
+             <h3>900грн в месяц</h3>
+             <p>Условия покупки</p>
+             <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
+         </div>
+         <div class="price_normal_3"></div>
+             <h3>900грн в месяц</h3>
+             <p>Условия покупки</p>
+             <button><a href="pages/courses/basic/buy.html">КУПИТЬ КУРС</a></button>
+         </div>
         <div id="belief">
-            <img src="images/.png">
+            <img src="../../images/граф стр 8.png">
             <h3>ЕЩЕ СОМНЕВАЕТЕСЬ</h3>
             <p>Текст...</p>
          </div>
@@ -74,7 +74,7 @@
     <footer id="contacts">
         <h4>ОСТАЛИСЬ ВОПРОСЫ</h4>
         <h4>КОНТАКТЫ:</h4>
-        <img src="images/лого бел.png">
+        <img src="../../images/лого бел.png">
         <a href="#header_grafic">Вернуться на главную</a>
     </footer>
 </body>
