--- a/pages/school.html
+++ b/pages/school.html
@@ -10,16 +10,16 @@
     <a href="../index.html">домашняя страница</a>
     <div class="header_school" id="header_school">
         <div class="header_left">
-            <img src="images/236.png">
-            <img src="images/лого.png">
+            <img src="../images/236 без детей.png">
+            <img src="../images/лого.png">
         </div>
         <div class="header_right">
-        <img src="images/гл 1.png">
+        <img src="../images/гл 1.png">
         <h1>О ШКОЛЕ</h1>
         <p>Само обучение в школе...</p>
     </div>
     <div>
-        <img src="images/гл 1.png">
+        <img src="../images/о школе.png">
         <div class="page3_left"></div>
         <h3>О ШКОЛЕ</h3>
         <ul>
@@ -33,7 +33,7 @@
             <li>Дизайнер-это высокооплачиваемая престижная профессия</li>
         </ul>
         </div>
-        <div><img src="images/гл 1.png">
+        <div><img src="../images/о школе.png">
             <h2>БОЛЬШАЯ ИГРА</h2>
             <p>Само обучение в школе...</p>
         </div>
@@ -54,7 +54,7 @@
     <footer id="contacts">
         <h4>ОСТАЛИСЬ ВОПРОСЫ</h4>
         <h4>КОНТАКТЫ:</h4>
-        <img src="images/лого бел.png">
+        <img src="../images/лого бел.png">
         <a href="#header_school">Вернуться на главную</a>
     </footer>
     </body>
