--- a/pages/team.html
+++ b/pages/team.html
@@ -11,27 +11,29 @@
     <div class="header_team" id="header_team">
         <h1>ПРИВЕТ!</h1>
         <p>Само обучение в школе...</p>
-        <img src="images/.png">
-        <img src="images/фон.png">
+        <video src="../images/ютуб курсы.png">
+        <img src="../images/курсы фон стр 2.png">
       </head> 
     </div>
    <main>
     <div id="collective">
         <h3>НАША КОМАНДА</h3>
-      <div class="page2_Photos">
+      <div class="page2_photos">
         <ul>
-            <li><img src="images/.png">
+            <li><img src="../images/.png">
             <p>Дизайнер-это высокооплачиваемая престижная профессия</p></li>
-            <li><img src="images/.png"></li>
-            <li><img src="images/.png"></li>
+            <li><img src="../images/.png">
+            <p>Дизайнер-это высокооплачиваемая престижная профессия</p></li>
+            <li><img src="../images/.png">
+            <p>Дизайнер-это высокооплачиваемая престижная профессия</p></li>
         </ul>
       </div>
    </div>
       <div id="author">
           <h3>ОБ АВТОРЕ ПРОГРАММЫ</h3>
           <p>Само обучение в школе...</p>
-          <img src="images/.png">
-          <img src="images/фон.png">
+          <img src="../images/стр 5 мое фото.png">
+          <img src="../images/курсы фон стр 7.png">
          </div>
        <div class="page4_left"></div>
        <h3>ОБ АВТОРСКОЙ ПРОГРАММЕ</h3>
@@ -49,15 +51,17 @@
        <div id="teacher's work">
         <h3>РАБОТЫ ПРЕПОДАВАТЕЛЯ</h3>
         <p>Вот некоторые из работ наших студентов</p>
-        <img src="images/.png">
-        <img src="images/.png">
+        <img src="../images/о ком 1.png">
+        <img src="../images/о ком 2.png">
         <button><a href="http">БОЛЬШЕ РАБОТ</a></button>
      </div>
      </main>
   <footer id="contacts">
       <h4>ОСТАЛИСЬ ВОПРОСЫ</h4>
+      <form
+      
       <h4>КОНТАКТЫ:</h4>
-      <img src="images/лого бел.png">
+      <img src="../images/лого бел.png">
       <a href="#header_team">Вернуться на главную</a>
   </footer>
 </body>
